# circle

./: .gitignore  README.md  run_matterport.py  train.py
data/: ScannnetLoader.py  data_utils.py  trainDataLoader.py  trainMatterportPcd.py  trainSynthesisPcd.py
network/: cnp_encoder.py  diff_renderer.py  sparseConvNet.py  utility.py
system/ext/: CMakeLists.txt  __init__.py
system/ext/imgproc/: imgproc.cu
system/ext/indexing/: indexing.cpp
system/ext/marching_cubes/: mc_data.cuh  mc_interp_kernel.cu
system/ext/pcproc/: cuda_dda.cu  pcproc.cpp  pcproc.cu
system/ext/render/: cutil_math.h  render.cpp  render.cu  render.h  render_cpu.cu
system/ext/sdfgen/: bind.cpp  sdf_from_points.cu
torch/: README.md  add_noise.py  crop_small.py  dr_matterport.py  run_matterport.py  sample_matterport.py  train.py
torch/config/: hyper_small.json
torch/data/: ScannetLoader.py  matterPortDataLoader.py  trainDataLoader.py  trainMatterportPcd.py
torch/eval/: compute.py  evaluation.py
torch/network/: base_net.py  cnp_encoder.py  deepsdf_decoder_cnp.py  diff_renderer.py  hierachicalDecoder.py  sparseConvNet.py  sparseConvNetAlter.py  sparseUnet2D.py
torch/structure/octree/: unet_oct.py
torch/system/ext/imgproc/: imgproc.cpp
torch/system/ext/indexing/: indexing.cu
torch/system/ext/marching_cubes/: mc.cpp  mc_kernel.cu
torch/system/ext/sdfgen/: cuda_kdtree.cu
torch/utils/: data_util.py  exp_util.py  net_util.py  point_util.py  vis_util.py
